[package]
name = "cargo-vistree"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["oriontvv <taranov.vv@gmail.com>"]
description = "cargo extension for visualize dependencies "
homepage = "https://github.com/oriontvv/cargo-vistree/"
repository = "https://github.com/oriontvv/cargo-vistree/"
documentation = "https://docs.rs/cargo-vistree"
keywords = ["cargo", "dependency", "plugin", "visualization", "dot"]
categories = ["command-line-utilities", "command-line-interface", "development-tools::cargo-plugins", "virtualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
petgraph = "0.6.3"
cargo-lock = { version = "9.0.0", features = ["dependency-tree"] }